# Protein-3d-Folding-Structure

./: .env.example  .gitignore  .vercelignore  README.md  TEST_REPORT.md  docker-compose.yml  package-lock.json  package.json  server.js  vercel.json  vite.config.js
.github/workflows/: main.yml
api/: health.py  requirements.txt
api/_shared/: auth.py  db.py  predictor.py  response.py
api/predictions/: [id].js  [id].py  history.js  history.py  predict.js  predict.py
api/users/: profile.js  projects.js
api/utils/: coordinate_generator.js  supabase.js
backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_results.txt  wsgi.py
backend/protein_fold/: constants.py
backend/protein_fold/app/: config.py  database.py  main.py
backend/protein_fold/app/auth/: __init__.py  supabase.py
backend/protein_fold/app/blueprints/: health.py  predictions.py  profiles.py  projects.py
backend/protein_fold/app/services/: coordinate_generator.py
backend/tests/: conftest.py  test_health.py  test_integration.py  test_predictions.py  test_profiles.py  test_projects.py  test_sharing.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: supabase-setup.md
docs/api/: endpoints.md
docs/supabase/: schema.sql
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
kubernetes/: README.md
scripts/: README.md  run_backend.ps1  run_frontend.ps1
src/: App.jsx  main.jsx
src/config/: api.js  supabase.js
src/services/: api.js
(+31 files in other folders)
