[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-fold"
version = "1.0.0"
description = "Protein structure prediction API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.0.0",
    "Flask-CORS==4.0.0",
    "requests==2.31.0",
    "numpy>=1.24.0",
    "gunicorn==21.2.0",
    "PyJWT[crypto]>=2.10.1",
    "supabase>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "pytest-benchmark==4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["protein_fold*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
